--- a/src/aceinternal/cachesys/cachesys.vcxproj
+++ b/src/aceinternal/cachesys/cachesys.vcxproj
@@ -147,7 +147,7 @@ XCOPY ..\..\..\bin\libs\libnetcored.dll ..\output\ /Y /R /F
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./src/serialize;./src;./protocal;./inc;./protocal_factory;./;../common/inc;../common/material-cpp;../typedef/inc;../simplexml/inc/;../logger/inc;../share/inc;../netcore/inc;../../../dep/ACE_wrappers/;../../../dep/boost_1_60_0/;../../../dep/protobuf-2.6.1/src;../../../dep/mysql++-3.2.2/lib;../../../dep/mysql-connector-c-6.1.6/include;../common/cachesys/inc;../dynamic_parse/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./src/serialize;./src;./protocal;./inc;./protocal_factory;./;../common/inc;../common/material-cpp;../typedef/inc;../simplexml/inc/;../logger/inc;../share/inc;../netcore/inc;../../../dep/ACE_wrappers/;../../../dep/boost_1_60_0/;../../../dep/protobuf-2.6.1/src;../../../dep/mysql++-3.2.2/lib;../../../dep/mysql-connector-c-6.1.6/include;../common/cachesys/inc;../dynamicparse/inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;DEBUG;_DEBUG;_CONSOLE;CACHE_HAS_STAT;MYSQLPP_NO_DLL;D_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -157,7 +157,7 @@ XCOPY ..\..\..\bin\libs\libnetcored.dll ..\output\ /Y /R /F
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>../../../dep/mysql++-3.2.2/vc2008/x64/Debug/mysqlpp_d.lib;../../../dep/ACE_wrappers/lib/ACEd.lib;SimpleXML.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;share.lib;logger.lib;netcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>../../../dep/mysql++-3.2.2/vc2008/x64/Debug/mysqlpp_d.lib;../../../dep/ACE_wrappers/lib/ACEd.lib;SimpleXML.lib;../../../dep/protobuf-2.6.1/lib/libprotobuf.lib;share.lib;logger.lib;netcore.lib;dynamicparse.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);../../../dep/boost_1_60_0/lib64-msvc-14.0/;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
@@ -278,7 +278,6 @@ XCOPY ..\..\..\bin\libs\libnetcore.dll ..\output\ /Y /R /F
     <ClCompile Include="..\common\material-cpp\protocol\msg_binary.pb.cc" />
     <ClCompile Include="..\common\material-cpp\protocol\msg_cache.pb.cc" />
     <ClCompile Include="protocal\cache_auto_assistant.cpp" />
-    <ClCompile Include="protocal_factory\factory.cpp" />
     <ClCompile Include="src\cached.cpp" />
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\DataRequestInfo.cpp" />
@@ -300,8 +299,6 @@ XCOPY ..\..\..\bin\libs\libnetcore.dll ..\output\ /Y /R /F
     <ClInclude Include="inc\cached.h" />
     <ClInclude Include="inc\config.h" />
     <ClInclude Include="inc\stat.h" />
-    <ClInclude Include="protocal\cache_auto_assistant.h" />
-    <ClInclude Include="protocal_factory\factory.h" />
     <ClInclude Include="src\DataRequestInfo.h" />
     <ClInclude Include="src\DbLoader.h" />
     <ClInclude Include="src\EntityHander.h" />
